tests/snapshots/test_runner__tests__compiler__typecheck__mutually_recursive_module_1__module_b__b__b.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
import "../module_a" // Error: mutually recursive import

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/mutually_recursive_module_1/module_b/b/b.kk:1:8
  │
1 │ import "../module_a" // Error: mutually recursive import
  │        ^^^^^^^^^^^^^ Errorneous Import Path.
  │
  = No such file or directory (os error 2)
